# WriteTo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: FetchGTest.cmake
include/WriteTo/: Arithmetic.hpp  Core.hpp  Ranges.hpp  Tuples.hpp
include/WriteTo/Floating/: All.hpp  Fmt.hpp
include/WriteTo/Integers/: All.hpp  File.hpp  Fmt.hpp  Ostream.hpp  Span.hpp
include/WriteTo/String/: File.hpp  Fmt.hpp  Ostream.hpp  Span.hpp
src/: CMakeLists.txt
src/WriteTo/: CMakeLists.txt
tests/: CMakeLists.txt
tests/WriteTo/: CMakeLists.txt  test_Toto.cpp
